Added additional server and client logic.

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Code Collab</title>
-    <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
-    <!--<meta name="google-signin-client_id" content="369682439691-dotpfi9fsqabij24dktfm29b0ri8mbep.apps.googleusercontent.com">-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="369682439691-dotpfi9fsqabij24dktfm29b0ri8mbep.apps.googleusercontent.com">
 </head>
 <body>
 <div style="display: none" id="content">
@@ -16,7 +16,18 @@
     </section>
     <section id="select">
         <h2>Join Team</h2>
-        <input type="text" id="groupNameInp">
+        <select id="groupSelect">
+            <option value="monkey">Monkey</option>
+            <option value="elephant">Elephant</option>
+            <option value="shark">Shark</option>
+            <option value="fish">Fish</option>
+            <option value="ship">Ship</option>
+            <option value="laser">Laser</option>
+            <option value="asteroid">Asteroid</option>
+            <option value="ocean">Ocean</option>
+            <option value="jungle">Jungle</option>
+            <option value="space">Space</option>
+        </select>
         <button id="joinBtn">Join Team</button>
     </section>
     <section id="active">
@@ -24,7 +35,6 @@
     </section>
 </div>
 
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="scripts/lib/jquery.min.js"></script>
 <script src="scripts/lib/socket.io.js"></script>
 <script src="scripts/lib/phaser.js"></script>
